update hotel name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-    <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Hotel</title>
@@ -106,7 +107,7 @@
                             <div class="col-xl-9">
                                 <div class="h1-slider-caption">
                                     <h1 data-animation="fadeInUp" data-delay=".4s">Muchels</h1>
-                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotel & Resourt</h3>
+                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotels & Suites Limited</h3>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +119,7 @@
                             <div class="col-xl-9">
                                 <div class="h1-slider-caption">
                                     <h1 data-animation="fadeInUp" data-delay=".4s">Muchels</h1>
-                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotel & Resourt</h3>
+                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotels & Suites Limited</h3>
                                 </div>
                             </div>
                         </div>
@@ -130,7 +131,7 @@
                             <div class="col-xl-9">
                                 <div class="h1-slider-caption">
                                     <h1 data-animation="fadeInUp" data-delay=".4s">Muchels</h1>
-                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotel & Resourt</h3>
+                                    <h3 data-animation="fadeInDown" data-delay=".4s">Hotels & Suites Limited</h3>
                                 </div>
                             </div>
                         </div>
@@ -518,6 +519,7 @@
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                     Copyright &copy;<script>
                                         document.write(new Date().getFullYear());
+
                                     </script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
@@ -616,4 +618,6 @@
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/main.js"></script>
 
-</body></html>
+</body>
+
+</html>
