--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div class=" col-xl-4 col-lg-4">
                         <div class="customer-caption">
                             <span>About our company</span>
-                            <h2>Make the customer the hero of your story</h2>
+                            <h2>About Company Title</h2>
                             <div class="caption-details">
                                 <p class="pera-dtails">Lorem ipsum dolor sit amet, consectetur adipisic- ing elit, sed do eiusmod tempor inc. </p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
