--- a/index.html
+++ b/index.html
@@ -609,6 +609,9 @@
     <script src="./assets/js/jquery.sticky.js"></script>
 
     <!-- contact js -->
+    <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
     <script src="./assets/js/contact.js"></script>
     <script src="./assets/js/jquery.form.js"></script>
     <script src="./assets/js/jquery.validate.min.js"></script>
@@ -618,6 +621,8 @@
     <!-- Jquery Plugins, main Jquery -->
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/main.js"></script>
+    
+
 
 </body>
 
